8月24日アップロード用

--- a/Yourexcel.html
+++ b/Yourexcel.html
@@ -15,4 +15,4 @@
 <td>グループ</td>
 <td> 区分</td>
 
-</tr><tr><td>0</td><td>メインテーブル</td><td>seat 1</td><td>渡＊</td><td>篤志</td><td>渡＊篤志</td><td></td><td></td><td>新郎側</td><td></td></tr><tr><td>0</td><td>メインテーブル</td><td>seat 2</td><td>＊田</td><td>香</td><td>＊田香</td><td></td><td></td><td>新婦側</td><td></td></tr><tr><td>6</td><td>F</td><td>seat 1</td><td>三谷</td><td>＊一</td><td>三谷＊一</td><td>様</td><td>株式会社ウェディングプラスホールディングス△代表取締役CEO</td><td>新郎側</td><td>主賓</td></tr></table></body></html>
+</tr></table></body></html>
