--- a/Yourexcel.html
+++ b/Yourexcel.html
@@ -15,4 +15,4 @@
 <td>グループ</td>
 <td> 区分</td>
 
-</tr></table></body></html>
+</tr><tr><td>0</td><td>高砂</td><td>seat 1</td><td>＊輪</td><td>和彦</td><td>＊輪和彦</td><td></td><td></td><td>新郎側</td><td></td></tr><tr><td>0</td><td>高砂</td><td>seat 2</td><td>桜</td><td>桃子</td><td>桜桃子</td><td></td><td></td><td>新婦側</td><td></td></tr><tr><td>0</td><td>高砂</td><td>seat 3</td><td>ああああ</td><td>あああ</td><td>あああああああ</td><td>様</td><td>様</td><td>新郎側</td><td>親戚</td></tr><tr><td>0</td><td>高砂</td><td>seat 4</td><td>桜</td><td>友蔵</td><td>桜友蔵</td><td>様</td><td>様</td><td>新婦側</td><td>親戚</td></tr></table></body></html>
