--- a/support/qa.html
+++ b/support/qa.html
@@ -24,9 +24,9 @@
     <br />
 <h2 class="popup_navi">Q 利用可能のパソコンやブラウザの環境は？</h2>
 <div class="popup_txt_icon">パソコンは、WindowsはXP以上、MacはOS10.4以上となります。<br />
-  ご利用いただけるインターネットのブラウザは、Windowsは、IE（Internet Explorer）7~8、Firefox3.x。Macは、Safari3.x、Firefox3.xとなります。なお、WindowsのIE6は正しく動作しませんので、IE7以上をご利用ください。<br />
+  ご利用いただけるインターネットのブラウザは、Windowsは、IE（Internet Explorer）7.0～9、Firefox5.0以上、Google Chrome14.0以上。Macは、Safari5.0以上、Firefox5.0以上となります。なお、WindowsのIE6は正しく動作しませんので、IE7.0以上をご利用ください。<br />
   推奨ブラウザ以外での動作は保証しておりませんので、ご了承ください。<br />
-ウエディングプラスのバージョンはvol.1.01です。</div>
+ウエディングプラスのバージョンはver.1.00です。</div>
 <br />
 <h2 class="popup_navi">Q 携帯は使えますか？</h2>
 <div class="popup_txt_icon">現在、携帯から入力することはできません。パソコンでの操作になります。</div>
