support_page_text

--- a/support/operation_u.html
+++ b/support/operation_u.html
@@ -23,25 +23,33 @@
     <div class="popup_txt01">お名前・挙式までの時間・前回のログイン日時を表示します。<br />
     お知らせ（ホテルからのメッセージを表示します）</div>
 <div class="popup_midashi01">席次表・席札の準備　Step1～5の順にお進みください。</div>
-<div class="popup_txt_icon">Step1　テーブルの配置（披露宴のレイアウトを確認します）<br />
-  （卓名を変更する場合は、テーブル名を入力します）</div>
-<div class="popup_txt_icon">Step2　引出物・料理の登録（引出物の商品をグループ別に設定します）<br />
-  （お子様料理の種類を設定します）</div>
-<div class="popup_txt_icon">Step3　招待客リストの作成（ご出席者のお名前・区分・肩書・引出物のグループなどを入力します）<br />
-  （料理特記には、アレルギーなどの注記を入力します）</div>
-<div class="popup_txt_icon">Step4　席次表の作成（お名前をドラックし、配席表の卓の位置に移動します）<br />
-  （席次表プレビューで、お客様の肩書・氏名・席を確認します）<br />
-  （引出物プレビューで、引出物・料理などの種類と数を確認します）</div>
-<div class="popup_txt_icon">Step5　校了・発注（席次表の印刷依頼・引出物の発注などを行います）<br />
-  （席次表の仮発注で、印刷物イメージを作成し、アップします）<br />
-  （席次表の本発注で、印刷物を作成します）<br />
+<div class="popup_txt_icon"><strong>Step1　テーブルの配置<br />
+</strong>・披露宴のレイアウトを確認します。<br />
+  ・卓名を変更する場合は、テーブル名を入力します。</div>
+<div class="popup_txt_icon"><strong>Step2　引出物・料理の登録<br />
+</strong>・引出物の商品をグループ別に設定します。<br />
+  ・お子様料理の種類を設定します。</div>
+<div class="popup_txt_icon"><strong>Step3　招待客リストの作成</strong><br />
+・ご出席者のお名前・区分・肩書・引出物のグループなどを入力します。<br />
+  ・料理特記には、アレルギーなどの注記を入力します。</div>
+<div class="popup_txt_icon"><strong>Step4　席次表の作成</strong><br />
+  ・お名前をドラックし、配席表の卓の位置に移動します。<br />
+  ・席次表プレビューで、お客様の肩書・氏名・席を確認します。<br />
+  ・引出物プレビューで、引出物・料理などの種類と数を確認します。</div>
+<div class="popup_txt_icon"><strong>Step5　校了・発注</strong><br />
+・席次表の印刷依頼・引出物の発注などを行います。<br />
+  ・席次表の仮発注で、印刷物イメージを作成し、アップします。<br />
+  ・席次表の本発注で、印刷物を作成します。<br />
   <br />
 </div>
-<div class="popup_midashi01">招待客リストダウンロード（入力した招待客データをExcelなどに利用できます）</div>
+<div class="popup_midashi01">招待客リストダウンロード</div>
+    <div class="popup_txt01">入力した招待客データをExcelなどに利用できます。</div>
 <br />
-<div class="popup_midashi01">お客様情報（お客様の挙式情報、席次表・引出物の設定を表示します）</div>
+<div class="popup_midashi01">お客様情報</div>
+    <div class="popup_txt01">お客様の挙式情報、席次表・引出物の設定を表示します。</div>
 <br />
-<div class="popup_midashi01">メッセージ（ホテルのスタッフとの連絡を行います）</div>
+<div class="popup_midashi01">メッセージ</div>
+    <div class="popup_txt01">ホテルのスタッフとの連絡を行います。</div>
 <br />
 <div style="clear:both;"></div></div>
 <div align="center"><input type="button" value="ウィンドウを閉じる" onClick="window.close()"></div>
