--- a/support/security.html
+++ b/support/security.html
@@ -21,7 +21,7 @@
     <div class="popup_txt_icon">SSL（Secure  Socket Layer）を使用している場合、URLは「http://」でなく、「https://」と表示されます。</div>
 <br />
     <h2 class="popup_navi">サーバー証明書により、安心してアクセスが可能</h2>
-    <div class="popup_txt_icon">偽でない、正しいサイトにアクセスしていることを証明するため、▲▲▲▲の認証をうけています。</div>
+    <div class="popup_txt_icon">偽でない、正しいサイトにアクセスしていることを証明するため、<a href="http://jp.globalsign.com/" target="_new">Global Sign</a>のSSLサーバ認証を受けています。</div>
     <div class="popup_txt_icon">ウェブブラウザには、鍵マークが表示されます。鍵マークをクリックすると、SSLサーバーの証明書を確認できます。</div>
     <br />
 <h2 class="popup_navi">お客様のデータを守り、ご利用後は消去します</h2>
