--- a/support/contact.html
+++ b/support/contact.html
@@ -24,7 +24,7 @@
     平日午前10時~午後5時まで（土日祝日を除く）<br />
     <br />
     メールでのお問い合わせ<br />
-Mail：<a href="m&#97;i&#108;t&#111;:&#119;&#101;&#100;d&#105;&#110;g&#112;&#108;&#97;s&#115;@&#115;&#117;&#110;&#112;ri&#46;c&#111;&#109;">&#119;&#101;&#100;d&#105;&#110;g&#112;&#108;&#97;s&#115;@&#115;&#117;&#110;&#112;ri&#46;c&#111;&#109;</a>
+Mail：<a href="m&#97;&#105;lto&#58;&#105;&#110;&#102;o&#64;&#119;e&#100;d&#105;n&#103;&#45;plu&#115;.n&#101;&#116;">inf&#111;&#64;we&#100;d&#105;ng-pl&#117;&#115;.&#110;et</a>
 </div>
   <div style="clear:both;"></div></div>
   <div align="center">
