#435 ホ/ユ：サポートページ内のバージョン情報を削除する

--- a/support/qa.html
+++ b/support/qa.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -26,7 +26,6 @@
 <div class="popup_txt_icon">パソコンは、WindowsはXP以上、MacはOS10.4以上となります。<br />
   ご利用いただけるインターネットのブラウザは、Windowsは、IE（Internet Explorer）7～9、Firefox7／8、Google Chrome14.0以上。Macは、Safari5.0以上、Firefox7／8となります。なお、WindowsのIE6は正しく動作しませんので、IE7.0以上をご利用ください。<br />
   推奨ブラウザ以外での動作は保証しておりませんので、ご了承ください。<br />
-ウエディングプラスのバージョンはver.1.00です。</div>
 <br />
 <h2 class="popup_navi">Q 携帯は使えますか？</h2>
 <div class="popup_txt_icon">現在、携帯から入力することはできません。パソコンでの操作になります。</div>
