--- a/support/qa.html
+++ b/support/qa.html
@@ -24,7 +24,7 @@
     <br />
 <h2 class="popup_navi">Q 利用可能のパソコンやブラウザの環境は？</h2>
 <div class="popup_txt_icon">パソコンは、WindowsはXP以上、MacはOS10.4以上となります。<br />
-  ご利用いただけるインターネットのブラウザは、Windowsは、IE（Internet Explorer）7～9、Firefox7／8、Google Chrome14.0以上。Macは、Safari5.0以上、Firefox7／8となります。なお、WindowsのIE6は正しく動作しませんので、IE7.0以上をご利用ください。<br />
+  ご利用いただけるインターネットのブラウザは、Windowsは、IE（Internet Explorer）7～9、FireFox 7以上、Google Chrome14.0以上。Macは、Safari5.0以上、FireFox 7以上となります。なお、WindowsのIE6は正しく動作しませんので、IE7.0以上をご利用ください。<br />
   推奨ブラウザ以外での動作は保証しておりませんので、ご了承ください。<br />
 <br />
 <h2 class="popup_navi">Q 携帯は使えますか？</h2>
