Change sampli company name #598

--- a/support/contact.html
+++ b/support/contact.html
@@ -31,7 +31,7 @@ Mail：<a href="m&#97;&#105;lto&#58;&#105;&#110;&#102;o&#64;&#119;e&#100;d&#105;
   <br />
 
   <div id="popup_topnavi_footer">
-    <p>Copyright (C) 株式会社サンプリンティングシステム ALL Rights reserved.</p>
+    <p>Copyright (C) 株式会社サンプリンティングシステム All rights reserved.</p>
   </div>
 </div>
 </body>
