--- a/support/operation_h.html
+++ b/support/operation_h.html
@@ -49,7 +49,7 @@
 <div align="center"><input type="button" value="ウィンドウを閉じる" onClick="window.close()"></div>
 <br />
   <div id="popup_topnavi_footer">
-    <p>Copyright (C) 株式会社サンプリンティングシステム ALL Rights reserved.</p>
+    <p>Copyright (C) 株式会社サンプリンティングシステム All rights reserved.</p>
   </div>
 </div>
 </body>
